--- a/src/Style/Home.scss
+++ b/src/Style/Home.scss
@@ -1,9 +1,65 @@
 .hero {
-  height: 100vh;
+  height: 100%;
+  min-height: 100vh;
   width: 100%;
-  background: url("./scene.webp");
+  // background: url("./scene.webp");
   background-size: cover;
   display: flex;
   justify-content: center;
   align-items: center;
+
+  .overview {
+    width: 100%;
+    height: 100%;
+    max-width: 350px;
+    background-color: black;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-evenly;
+  }
+  .main {
+    width: 100%;
+    height: 100%;
+    padding: 2.5vw;
+    display: flex;
+    flex-direction: column;
+    gap: max(10vh, 2rem);
+
+    .mainhead {
+      display: flex;
+      align-items: flex-end;
+      flex-direction: row;
+      justify-content: space-evenly;
+      gap: max(5vw, 2rem);
+      width: -webkit-fit-content;
+      width: -moz-fit-content;
+      width: fit-content;
+      margin-top: 25%;
+
+      .headTitle {
+        width: 100%;
+
+        p {
+          font-size: 4rem;
+        }
+      }
+      .headInfo {
+        max-width: clamp(45ch, 5vw, 60ch);
+      }
+    }
+    .mainBody {
+      width: 100%;
+      height: auto;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      gap: 2rem;
+      .showcaseItem {
+        width: 100%;
+        // height: 100px;
+        aspect-ratio: 16/9;
+        background-color: gray;
+      }
+    }
+  }
 }
