--- a/src/Style/Component.scss
+++ b/src/Style/Component.scss
@@ -80,7 +80,7 @@
     border-radius: 0 0 calc(var(--bRadius) * 4) calc(var(--bRadius) * 4);
     cursor: pointer;
     -webkit-backdrop-filter: blur(2px);
-            backdrop-filter: blur(2px);
+    backdrop-filter: blur(2px);
 
     .menu-item {
       width: 50%;
@@ -150,9 +150,9 @@
     height: 100vh;
     background: radial-gradient(circle at 50% 0, rgb(15 15 15) 10%, rgba(0, 0, 0, 0) 50%);
     -webkit-backdrop-filter: blur(5px);
-            backdrop-filter: blur(5px);
+    backdrop-filter: blur(5px);
     -webkit-mask: radial-gradient(circle at 50% 0, rgb(0 0 0) 20%, rgba(0, 0, 0, 0) 50%);
-            mask: radial-gradient(circle at 50% 0, rgb(0 0 0) 20%, rgba(0, 0, 0, 0) 50%);
+    mask: radial-gradient(circle at 50% 0, rgb(0 0 0) 20%, rgba(0, 0, 0, 0) 50%);
     opacity: 0;
     pointer-events: none;
     transform-origin: top center;
@@ -171,7 +171,7 @@
   background-color: white;
   overflow: hidden;
   z-index: 2;
-  
+
   &Wrapper {
     position: relative;
     height: 100%;
@@ -230,96 +230,114 @@
     text-align: center;
     width: 100%;
     -webkit-clip-path: polygon(50% 0%, 0% 0%, 0% 100%, 50% 100%, 50% 0%, 100% 0%, 100% 100%, 50% 100%);
-            clip-path: polygon(50% 0%, 0% 0%, 0% 100%, 50% 100%, 50% 0%, 100% 0%, 100% 100%, 50% 100%);
+    clip-path: polygon(50% 0%, 0% 0%, 0% 100%, 50% 100%, 50% 0%, 100% 0%, 100% 100%, 50% 100%);
   }
 }
 
 // FIlter
-   
-    //     button {
-    //       background: #222;
-    //       border: none;
-    //       color: white;
-    //       padding: 0.5rem 1rem;
-    //       border-radius: 20px;
-    //       cursor: pointer;
-    //       transition: background 0.3s ease;
 
-    //       &:hover {
-    //         background: #333;
-    //       }
-    //       &.active {
-    //         background: #000;
-    //         color: white;
-    //       }
+//     button {
+//       background: #222;
+//       border: none;
+//       color: white;
+//       padding: 0.5rem 1rem;
+//       border-radius: 20px;
+//       cursor: pointer;
+//       transition: background 0.3s ease;
 
-    //       .tag-count {
-    //         opacity: 0.6;
-    //         font-size: 0.8em;
-    //       }
-    //     }
-    //   }
-    // }
+//       &:hover {
+//         background: #333;
+//       }
+//       &.active {
+//         background: #000;
+//         color: white;
+//       }
+
+//       .tag-count {
+//         opacity: 0.6;
+//         font-size: 0.8em;
+//       }
+//     }
+//   }
+// }
 .filter-container {
   max-width: 570px;
   margin: 0 auto;
 
-  
-.filter-buttons {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 0.5rem;
-  // overflow: visible;
-  margin-top: 1rem;
-}
+  .filter-buttons {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.5rem;
+    // overflow: visible;
+    margin-top: 1rem;
+  }
 
-.filter-button {
-  display: inline-flex;
-  align-items: center;
-  padding: 0.4rem 0.9rem;
-  border-radius: 50px;
-  font-size: 0.9rem;
-  overflow: hidden;
-  cursor: pointer;
-  border: none;
-  outline: none;
-  
-  &.selected {
-    color: var(--secAccent);
-    border: 1px solid rgba(255, 255, 255, 0.12);
-    
-    .text-container {
-      padding-right: 1.5rem;
+  .filter-button {
+    display: inline-flex;
+    align-items: center;
+    padding: 0.4rem 0.9rem;
+    border-radius: 50px;
+    font-size: 0.75rem;
+    overflow: hidden;
+    cursor: pointer;
+    border: none;
+    outline: none;
+
+    &.selected {
+      color: var(--secAccent);
+      border: 1px solid rgba(255, 255, 255, 0.12);
+
+      .text-container {
+        padding-right: 1.5rem;
+      }
+        .tag-count {
+          opacity: 1;
+        }
+    }
+
+    &:not(.selected) {
+      color: #9a9a9a;
+      border: 1px solid rgba(255, 255, 255, 0.06);
     }
   }
-  
-  &:not(.selected) {
-    color: #9a9a9a;
-    border: 1px solid rgba(255, 255, 255, 0.06);
+
+  .text-container {
+    position: relative;
+    display: flex;
+    align-items: center;
+    width: 100%;
   }
-}
 
-.text-container {
-  position: relative;
-  display: flex;
-  align-items: center;
-  width: 100%;
-}
+  .tag-count {
+    // position: absolute;
+    // top: 50%;
+    // left: -0.6rem;
+    font-size: 0.6rem;
+    // translate: 0 50%;
+    line-height: 0;
+    margin-right: 0.25rem;
+    -webkit-text-decoration-line: underline;
+            text-decoration-line: underline;
+    opacity: 0.7;
+    transition: all 0.2s ease;
+  }
 
-.svg-icon {
-  position: absolute;
-  right: 0;
-  width: 16px;
-  height: 16px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
 
-.animated-check {
-  width: 100%;
-  height: 100%;
-}
+  .svg-icon {
+    position: absolute;
+    right: 0;
+    width: 16px;
+    height: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.3s ease;
+  }
+
+  .animated-check {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 @media (width <= 800px) {
@@ -404,7 +422,7 @@
     h2 {
       // font-size: clamp(1.5rem, 5.333vw + 0.333rem, 2.5rem);
       font-size: 2.5rem;
-    text-align: center;
+      text-align: center;
     }
 
     .header {
@@ -452,7 +470,7 @@
 @media (width <= 1000px) {
   .contactCard {
     transform: translate(-1%, 3%);
-    .contDetail h2{
+    .contDetail h2 {
       font-size: 2rem;
     }
   }
@@ -463,12 +481,11 @@
     aspect-ratio: 1/2;
     height: 400px;
     transform: translate(1%, 3%);
-    .contDetail{
+    .contDetail {
       width: 100%;
       gap: 3rem;
-  
-    } 
-    .contCanv{
+    }
+    .contCanv {
       display: none;
       width: 100%;
       // height: fit-content;
@@ -480,7 +497,7 @@
   .contactCard {
     height: 450px;
     transform: translate(-1%, 2%);
-    .contDetail h2{
+    .contDetail h2 {
       font-size: 1.5rem;
     }
   }
