fix - showcase display fixed

--- a/src/Style/Home.scss
+++ b/src/Style/Home.scss
@@ -346,9 +346,8 @@
     }
 
     .scContent {
-      max-width: 800px;
-      color: white;
-      padding: 2rem;
+      height: 100%;
+      width: 100%;
     }
     .scSidebar {
       width: 100%;
