--- a/src/Style/Home.scss
+++ b/src/Style/Home.scss
@@ -223,26 +223,33 @@
       position: absolute;
       top: 0;
       right: 0;
-      width: 30px;
-      height: 25px;
-      background: transparent;
+      // width: 30px;
+      // height: 25px;
+      // background: transparent;
+      width: 3rem;
+      height: 3rem;
+      background: $bg-color;
+      color: var(--secAccent);
       border: 0;
       scale: 1;
       margin: 1.25rem;
+      border-radius: 50%;
       cursor: pointer;
       z-index: 1000;
-      transition: scale 0.25s ease;
+      transition: all 0.25s ease;
 
       &-line {
         position: absolute;
         left: 0;
         width: 100%;
         height: 2px;
-        background: rgba(255, 255, 255, 0.801);
+        background: var(--secAccent);
+        scale: 0.5;
+    margin-left: 0.75rem;
         transition: all 0.3s ease;
 
         &:first-child {
-          top: 2px;
+          top: 35%;
           transform: translateY(0);
           transform-origin: left;
         }
@@ -254,7 +261,7 @@
         }
 
         &:last-child {
-          bottom: 0;
+          top: 65%;
           transform: translateY(0);
           transform-origin: left;
         }
@@ -262,10 +269,15 @@
 
       &.active {
         scale: 0.5;
+        top: -0.6rem;
+
+
 
         .hamburger-line {
           &:first-child {
             transform: rotate(45deg);
+            top: 30%;
+
           }
           &:nth-child(2) {
             opacity: 0;
@@ -286,15 +298,18 @@
       transform: translateX(-50%);
       display: flex;
       gap: 1rem;
+      background: $bg-color;
+      padding: 0.5rem;
+      border-radius: 10px;
       z-index: 1001;
 
       .nav-button,
       .quick-nav-button {
-        width: 3rem;
-        height: 3rem;
+        width: 2.5rem;
+        height: 2.5rem;
         border-radius: 50%;
-        background: rgba(0, 0, 0, 0.7);
-        color: white;
+        background: var(--secAccent);
+        color: $light-green;
         border: none;
         display: flex;
         align-items: center;
@@ -304,8 +319,8 @@
         font-size: 1.2rem;
 
         &:hover {
-          background: rgba(0, 0, 0, 0.9);
-          transform: scale(1.1);
+          background: #f7dfd3;
+          // transform: scale(1.05);
         }
 
         &:disabled {
@@ -315,7 +330,7 @@
       }
 
       .quick-nav-button {
-        font-size: 0.9rem;
+        font-size: 0.8rem;
         letter-spacing: 2px;
       }
     }
@@ -326,8 +341,8 @@
       left: 0;
       margin: 1.25rem;
       z-index: 1001;
-      background: rgba(0, 0, 0, 0.7);
-      color: white;
+      background: $bg-color;
+      color: var(--secAccent);
       border: none;
       width: 3rem;
       height: 3rem;
@@ -340,7 +355,7 @@
       font-size: 1.2rem;
 
       &:hover {
-        background: rgba(0, 0, 0, 0.9);
+        background: $light-green;
         transform: scale(1.1);
       }
     }
@@ -361,7 +376,7 @@
       position: absolute;
       top: 0;
       right: 0;
-      background: rgba($bg-color, 0.9);
+      background: $bg-color;
       transition: all 0.5s ease-in-out;
       z-index: 2;
       // display: flex;
