--- a/src/Style/Home.scss
+++ b/src/Style/Home.scss
@@ -114,6 +114,7 @@
     display: flex;
     flex-direction: column;
     gap: max(10vh, 2rem);
+    margin-bottom: min(5vh, 2rem);
 
     .mainhead {
       display: flex;
@@ -135,6 +136,7 @@
       }
       .headInfo {
         max-width: clamp(45ch, 5vw, 60ch);
+        font-size: clamp(16px, 2.5vw, 18px);
       }
     }
 
@@ -245,7 +247,7 @@
         height: 2px;
         background: var(--secAccent);
         scale: 0.5;
-    margin-left: 0.75rem;
+        margin-left: 0.75rem;
         transition: all 0.3s ease;
 
         &:first-child {
@@ -271,13 +273,10 @@
         scale: 0.5;
         top: -0.6rem;
 
-
-
         .hamburger-line {
           &:first-child {
             transform: rotate(45deg);
             top: 30%;
-
           }
           &:nth-child(2) {
             opacity: 0;
@@ -506,5 +505,39 @@
     to {
       opacity: 1;
     }
+  }
+}
+
+// Media sizing
+
+@media (width <= 1125px) {
+  .hero .main {
+    min-width: 400px;
+    .mainhead {
+      flex-direction: column;
+      // gap: max(5vw, 2rem);
+
+      .headTitle {
+        p {
+          font-size: clamp(2.25rem, 5.333vw + 0.333rem, 3.5rem);
+        }
+      }
+      // .headInfo {
+      //   max-width: clamp(45ch, 5vw, 60ch);
+      // }
+    }
+  }
+}
+@media (width <= 700px) {
+  .hero .overview {
+    display: none;
+  }
+}
+@media (width <= 500px) {
+  .loaderText {
+    padding: 0;
+  }
+  .loaderProgressNumber {
+    font-size: clamp(2.5rem, 5.333vw + 0.333rem, 3.5rem);
   }
 }
