--- a/src/Style/main.css
+++ b/src/Style/main.css
@@ -7,7 +7,8 @@ html.lenis, html.lenis body {
   }
   
   .lenis.lenis-smooth [data-lenis-prevent] {
-    overscroll-behavior: contain;
+    -ms-scroll-chaining: none;
+        overscroll-behavior: contain;
   }
   
   .lenis.lenis-stopped {
@@ -103,7 +104,6 @@ body,
   background-color: var(--bg);
   -webkit-touch-callout: none;
   -webkit-user-select: none;
-  -khtml-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
@@ -111,6 +111,7 @@ body,
   &::-webkit-scrollbar {
     display: none; /* Safari and Chrome */
   }
+  overscroll-behavior-x: none;
 }
 
 #root {
