--- a/src/Style/main.css
+++ b/src/Style/main.css
@@ -1,58 +1,59 @@
-html.lenis, html.lenis body {
-    height: auto;
-  }
-  
-  .lenis.lenis-smooth {
-    scroll-behavior: auto !important;
-  }
-  
-  .lenis.lenis-smooth [data-lenis-prevent] {
-    -ms-scroll-chaining: none;
-        overscroll-behavior: contain;
-  }
-  
-  .lenis.lenis-stopped {
-    overflow: hidden;
-  }
-  
-  .lenis.lenis-smooth iframe {
-    pointer-events: none;
-  }
+html.lenis,
+html.lenis body {
+  height: auto;
+}
 
-  ::-moz-selection {
-    background: gray;
-    color: #fff;
-    -webkit-text-fill-color: #fff;
-  }
-  
-  ::selection {
-    background: gray;
-    color: #fff;
-    -webkit-text-fill-color: #fff;
-  }
-  
-  ::-webkit-scrollbar-track {
-    background: inherit;
-  }
-  
-  ::-webkit-scrollbar-thumb {
-    background: rgba(255, 255, 255, 0.4);
-    border-radius: 99px;
-  }
-  
-  ::-webkit-scrollbar {
-    width: 5px;
-    height: 5px;
-    background: inherit;
-  }
-  
-  [data-hidden] {
-    opacity: 0;
-  }
-  
+.lenis.lenis-smooth {
+  scroll-behavior: auto !important;
+}
+
+.lenis.lenis-smooth [data-lenis-prevent] {
+  -ms-scroll-chaining: none;
+  overscroll-behavior: contain;
+}
+
+.lenis.lenis-stopped {
+  overflow: hidden;
+}
+
+.lenis.lenis-smooth iframe {
+  pointer-events: none;
+}
+
+::-moz-selection {
+  background: #294122;
+  color: #f1ccba;
+  -webkit-text-fill-color: #f1ccba;
+}
+
+::selection {
+  background: #294122;
+  color: #f1ccba;
+  -webkit-text-fill-color: #f1ccba;
+}
+
+::-webkit-scrollbar-track {
+  background: inherit;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgba(255, 255, 255, 0.4);
+  border-radius: 99px;
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+  background: inherit;
+}
+
+[data-hidden] {
+  opacity: 0;
+}
 
 
-  /* kufam-regular */
+
+/* kufam-regular */
 @font-face {
   font-display: swap;
   font-family: "Kufam";
@@ -60,6 +61,7 @@ html.lenis, html.lenis body {
   /* // font-weight: 400; */
   src: url("/Font/kufam.woff2") format("woff2");
 }
+
 /* //   @font-face {
 //     font-family: 'Kufam';
 //     src:
@@ -79,7 +81,7 @@ html.lenis, html.lenis body {
 //     font-style: normal;
 //     font-weight: 400;
 //     src: url('./Font/krona.woff2') format('woff2');
-//   } */ 
+//   } */
 
 * {
   box-sizing: border-box;
@@ -108,9 +110,12 @@ body,
   -ms-user-select: none;
   user-select: none;
   scrollbar-width: none;
+
   &::-webkit-scrollbar {
-    display: none; /* Safari and Chrome */
+    display: none;
+    /* Safari and Chrome */
   }
+
   overscroll-behavior-x: none;
 }
 
@@ -118,7 +123,7 @@ body,
   background-position: center;
   background-size: cover;
   height: auto;
-min-height: 100vh;
+  min-height: 100vh;
 }
 
 body {
@@ -128,24 +133,29 @@ body {
   color: white;
   -webkit-font-smoothing: antialiased;
 }
+
 ul {
   list-style: none;
 }
+
 a {
   color: inherit;
   text-decoration: none;
   cursor: pointer;
 }
+
 button {
   cursor: pointer;
   all: unset;
 }
+
 h1 {
   font-size: clamp(1rem, 5.333vw + 0.333rem, 1.5rem);
   text-transform: uppercase;
   /* //   font-family: "krona One", helvetica neue, helvetica, arial, sans-serif; */
   font-weight: 600;
 }
+
 h2 {
   font-size: clamp(1rem, 5.333vw + 0.333rem, 1.25rem);
   text-transform: uppercase;
