--- a/src/Style/Component.scss
+++ b/src/Style/Component.scss
@@ -589,3 +589,38 @@
     }
   }
 }
+
+
+// Directional aware button
+.button-effect {
+  border: none;
+  color: white;
+  display: inline-block;
+  text-align: center;
+  text-decoration: none;
+  margin: 4px;
+  padding: 0.4rem 0.9rem;
+    border-radius: 50px;
+    font-size: 0.75rem;
+
+  // height: 20px;
+  // width: 40px;
+  cursor: pointer; 
+  position: relative;
+  overflow: hidden;
+  transform: scale(1);
+}
+
+.button-effect-circle {
+  position: absolute;
+  // width: 100%;
+  height: 100%;
+  aspect-ratio: 1;
+  border-radius: 50px;
+  opacity: 1;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  pointer-events: none;
+  opacity: 0;
+}
